[tool.poetry]
name = "twitter-topic"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.0"
twitterapi = "^2.8.2"
matplotlib = "^3.7.1"
japanize-matplotlib = "^1.1.3"
wordcloud = "^1.8.2.2"
ja-ginza = "^5.1.2"
gensim = "^4.3.1"
pyldavis = "^3.4.0"

[tool.poetry.dev-dependencies]
black = "^21.12-beta.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
