[tool.poetry]
name = "twitter-topic"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
twitterapi = "^2.8.2"
wordcloud = "^1.9.2"
mecab = "^0.996.3"
numpy = "^1.24.3"
gensim = "^4.3.1"
pyldavis = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
