[tool.poetry]
name = "twitter-topic"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
twitterapi = "^2.8.2"
matplotlib = "^3.7.1"
japanize-matplotlib = "^1.1.3"
wordcloud = "^1.9.2"
ja-ginza = "^5.1.2"
gensim = "^4.3.1"
pyldavis = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
